practice/service/ingress/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
  annotations:  
    service.beta.kubernetes.io/aws-load-balancer-type: external            
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip     
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing  
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: goapp-lb
  annotations:  
    service.beta.kubernetes.io/aws-load-balancer-type: external            
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip     
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing  
spec:
  type: LoadBalancer
  selector:
    app: goapp
  ports:
  - port: 80
    targetPort: 8080
